--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,85 @@
+* {
+    font-family: 'Courier New', Courier, monospace;
+}
+
 body {
     background-color: #00194b;
 }
 
-section {
+header {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 2.5rem 2.5rem 2.5rem;
+    height: 5rem;
+    border: #fff 1px solid;
+    flex-direction: row;
+
+    h1, nav, div {
+        flex: 1;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav ul {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        list-style-type: none;
+        padding-left: 0;
+        margin: 0;
+    }   
+}
+
+a {
+    color: #d8a068;
+    transition: 0.75s;
+    text-decoration: none;
+
+    &:visited {
+        color: #d46a00;
+    }
+
+    &:hover {
+        color: #ffffff;
+        text-decoration: underline;
+    }
+}
+
+section.flex {
     margin: 2.5rem;
     height: 10rem;
     border: #fff 1px solid;
     display: flex;
     flex-direction: row;
+    
+    &.j-start {
+        justify-content: flex-start;
+    }
+
+    &.j-center {
+        justify-content: center;
+    }
+
+    &.j-end {
+        justify-content: flex-end;
+    }
 }
 
-.j-start {
-    justify-content: flex-start;
+img {
+    &.round {
+        border-radius: 5rem;
+    }
+
+    &.border{
+        border: #fff 5px solid;
+        box-sizing: border-box;
+    }
 }
 
-.j-center {
-    justify-content: center;
-}
-
-.j-end {
-    justify-content: flex-end;
-}
-
-.image {
+.size-10 {
     height: 10rem;
     width: 10rem;
-}
-
-.image__two {
-    border-radius: 5rem;
-}
-
-.image__three {
-    border: #fff 5px solid;
-    box-sizing: border-box;
 }
