--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Courier New', Courier, monospace;
+    font-size: calc(1vw + 1vh);
 }
 
 body {
@@ -9,17 +10,26 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    margin: 0 2.5rem 2.5rem 2.5rem;
+    margin: 0 2.5% 2.5% 2.5%;
     height: 5rem;
     border: #fff 1px solid;
     flex-direction: row;
+    flex-wrap: wrap;
+    min-height: fit-content;
+    max-width: 100%;
 
     h1, nav, div {
+        height: 100%;
         flex: 1;
+        max-height: fit-content;
+        min-width: fit-content;
     }
 
     h1 {
+        max-width: min-content;
         text-align: center;
+        text-wrap: wrap;
+        font-size: calc(2vw + 2vh);
     }
 
     nav ul {
@@ -49,8 +59,8 @@ a {
 }
 
 section.flex {
-    margin: 2.5rem;
-    height: 10rem;
+    margin: 2.5%;
+    height: 40%;
     border: #fff 1px solid;
     display: flex;
     flex-direction: row;
@@ -82,4 +92,26 @@ img {
 .size-10 {
     height: 10rem;
     width: 10rem;
+}
+
+@media(max-width: 272px) {
+    header {
+        justify-content: space-between;
+        h1 {
+            width: 100%;
+            max-width: 100%;
+            order: -1;
+        }
+
+        nav {
+        width: 100%;
+        min-width: 100%;
+        
+        ul {
+            width: 100%;
+            flex-direction: row;
+            height: fit-content;
+            justify-content: space-between;
+        }
+    }
 }
