--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ header {
     align-items: center;
     margin: 0 2.5% 2.5% 2.5%;
     height: 5rem;
-    border: #fff 1px solid;
     flex-direction: row;
     flex-wrap: wrap;
     min-height: fit-content;
@@ -33,7 +32,7 @@ header {
     }
 
     nav {
-        justify-content: space-between;
+        justify-content: space-evenly;
         margin: 0;
     }
 
@@ -66,8 +65,8 @@ a {
 
 section.flex {
     margin: 2.5%;
-    height: 40%;
-    border: #fff 1px solid;
+    width:auto;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     
@@ -84,20 +83,21 @@ section.flex {
     }
 }
 
+.size-10 {
+    height: calc(10vw + 10vh);
+    width: calc(10vw + 10vh);
+}
+
 img {
+
     &.round {
-        border-radius: 5rem;
+        border-radius: calc((10vw + 10vh)/2);
     }
 
     &.border{
         border: #fff 5px solid;
         box-sizing: border-box;
     }
-}
-
-.size-10 {
-    height: calc(10vw + 10vh);
-    width: calc(10vw + 10vh);
 }
 
 @media(275px <= width <= 400px) {
